Add swagger to cmsapi Add Linux port configuration in program case used on linux Configure middleware extension and link cmsapi to it

--- a/CmsApi/CmsApi.csproj
+++ b/CmsApi/CmsApi.csproj
@@ -8,10 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\BreweryWholesaleManagement.Extension\BreweryWholesaleManagement.Extension.csproj" />
   </ItemGroup>
 
 </Project>
