--- a/CmsApi/Properties/launchSettings.json
+++ b/CmsApi/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "BreweryWholesaleManagement": {
+    "CmsApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
