--- a/BreweryWholesaleManagement.Extension/BreweryWholesaleManagement.Extension.csproj
+++ b/BreweryWholesaleManagement.Extension/BreweryWholesaleManagement.Extension.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="NLog" Version="5.1.3" />
   </ItemGroup>
 
   <ItemGroup>
