--- a/Helpers/Helpers.csproj
+++ b/Helpers/Helpers.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NLog" Version="5.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BreweryWholesaleManagement.Models\BreweryWholesaleManagement.Models.csproj" />
+  </ItemGroup>
+
 </Project>
