Build dbmodels entityframework lunch migration

--- a/CmsApi/appsettings.json
+++ b/CmsApi/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "PortLinux": 5004,
+  "DefaultConnection": "Server=localhost;Database=BreweryWholesaleDB;Persist Security Info=True;User ID=PracticeUser;Password=P@ssw0rd;TrustServerCertificate=True;",
   "AllowedHosts": "*"
 }
