Dataanotation model filter added finish dbcontext start business for list and add beer

--- a/CmsApi/nlog.config
+++ b/CmsApi/nlog.config
@@ -18,22 +18,18 @@
 
 		<target xsi:type="Null" name="blackHole" />
 
-		<target name="database" type="Database" connectionString="Data Source=localhost;Initial Catalog=BreweryWholesaleDb;User ID=PracticeUser;Password=P@ssw0rd" >
-			<commandText> 
-				INSERT INTO Log (
-				"IdHandset"
-				,"Machine"
+		<target name="database" type="Database" connectionString="Data Source=localhost;Initial Catalog=BreweryWholesaleDB;User ID=PracticeUser;Password=P@ssw0rd;TrustServerCertificate=True;" >
+			<commandText>
+				<!--insert into logs(RequestBody)values(1)-->
+				INSERT INTO Logs (
+				"Machine"
 				,"Level"
 				,"Logger"
 				,"Message"
 				,"RequestPath"
 				,"Headers"
-				,"DecryptedHeaders"
 				,"RequestBody"
-				,"DecryptedRequestBody"
 				,"Response"
-				,"DecryptedResponse"
-				,"EncKeys"
 				,"Exception"
 				,"ExecutionTime"
 				,"IP"
@@ -42,19 +38,14 @@
 				,"BaseLink" 
 				)
 				VALUES(
-				@IdHandset::INTEGER
-				,@Machine
+				@Machine
 				,@Level
 				,@Logger
 				,@Message
 				,@RequestPath
 				,@Headers
-				,@DecryptedHeaders
 				,@RequestBody
-				,@DecryptedRequestBody
 				,@Response
-				,@DecryptedResponse
-				,@EncKeys
 				,@Exception
 				,@ExecutionTime
 				,@IP
@@ -64,20 +55,15 @@
 				);
 			</commandText>
 
-
-			<parameter name="@IdHandset" layout="${mdlc:item=IdHandset}" />
+ 
 			<parameter name="@Machine" layout="${machinename}"/>
 			<parameter name="@Level" layout="${level}" />
 			<parameter name="@Logger" layout="${logger}" />
 			<parameter name="@Message" layout="${message}" />
 			<parameter name="@RequestPath" layout="${mdlc:item=RequestPath}" />
-			<parameter name="@Headers" layout="${mdlc:item=Headers}" />
-			<parameter name="@DecryptedHeaders" layout="${mdlc:item=DecryptedHeaders}" />
-			<parameter name="@RequestBody" layout="${mdlc:item=RequestBody}" />
-			<parameter name="@DecryptedRequestBody" layout="${mdlc:item=DecryptedRequestBody}" />
-			<parameter name="@Response" layout="${mdlc:item=Response}" />
-			<parameter name="@DecryptedResponse" layout="${mdlc:item=DecryptedResponse}" />
-			<parameter name="@EncKeys" layout="${mdlc:item=EncKeys}" />
+			<parameter name="@Headers" layout="${mdlc:item=Headers}" /> 
+			<parameter name="@RequestBody" layout="${mdlc:item=RequestBody}" /> 
+			<parameter name="@Response" layout="${mdlc:item=Response}" /> 
 			<parameter name="@Exception" layout="${mdlc:item=Exception}" />
 			<parameter name="@Stacktrace" layout="${mdlc:item=Stacktrace}" />
 			<parameter name="@ExecutionTime" layout="${mdlc:item=ExecutionTime}" />
