--- a/BreweryWholesaleManagement.Business/BreweryWholesaleManagement.Business.csproj
+++ b/BreweryWholesaleManagement.Business/BreweryWholesaleManagement.Business.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="NLog" Version="5.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BreweryWholesaleManagement.Models\BreweryWholesaleManagement.Models.csproj" />
+  </ItemGroup>
+
 </Project>
