--- a/CmsApi/CmsApi.csproj
+++ b/CmsApi/CmsApi.csproj
@@ -20,11 +20,14 @@
     <PackageReference Include="NLog" Version="5.1.3" />
     <PackageReference Include="NLog.Config" Version="4.7.15" />
     <PackageReference Include="NLog.Database" Version="5.1.3" />
+    <PackageReference Include="NLog.Web" Version="5.2.3" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BreweryWholesaleManagement.Business\BreweryWholesaleManagement.Business.csproj" />
     <ProjectReference Include="..\BreweryWholesaleManagement.Data\BreweryWholesaleManagement.Data.csproj" />
     <ProjectReference Include="..\BreweryWholesaleManagement.Extension\BreweryWholesaleManagement.Extension.csproj" />
   </ItemGroup>
